# baseball-query

./: .gitignore  README.md  api.yml  api_app.py  baseball_plays.db-shm  baseball_plays.db-wal  batter_data.py  batter_model.py  common_data.py  data_extracting.py  db.py  era_manager.py  https.py  pitch_data.py  pitcher_model.py  pyproject.toml  rank.py  requirements.txt  setup.py  static_data.py  utils.py
baseball_query/: __init__.py  abc.py  async_db.py  baseball_query.py  builder_factory.py  cache.py  cache_manager.py  complex_metrics.py  db_access_layer.py  errors.py  main_query_builder.py  metric_manager.py  processing.py  queries.py  query_engine.py  sql_query.py  static_data.py
baseball_stats/: __init__.py  baseball_query.py  batter_data.py  builder_metrics.py  common_data.py  complex_metrics.py  data_extracting.py  db.py  db_tools.py  errors.py  https.py  insertion.py  metrics_abc.py  pitch_data.py  processing.py  queries.py  static_data.py  utils.py
tests/: conftest.py  test_baseball_query.py  test_batter_pitch.py  test_daily_update.py  test_processing_ops.py  test_query_builders.py  test_query_engine.py  test_sql_query.py  test_utils.py  utils_for_test.py
tests/stubs/aiomysql/: __init__.py
tests/stubs/numpy/: __init__.py
tests/stubs/pandas/: __init__.py
