[project]
name = "baseball-query"
version = "3.0.7"
description = "Backend management for a baseball stats db"
authors = [
    {name = "Bla005-1",email = "blasupercell@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cryptography"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
